<resources>
    <string name="app_name">CovidTrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetch">Fetch</string>
    <string name="titlepagetext">Covid 19 India \nCases Tracker</string>
    <string name="india">INDIA</string>
    <string name="textTitleSize">25sp</string>
    <string name="confirmed">confirmed : %s</string>
    <string name="active">active : %s</string>
    <string name="deceased">Deceased: %s</string>
    <string name="migrate">Migrate : %s</string>
    <string name="recovered">Recovered : %s</string>
    <string name="delta_variant">Delta Variant :</string>
</resources>