<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:id="@+id/cardView">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/districtextView"
                    tools:text="@string/app_name"
                    android:textSize="20sp"
                    style="@style/titleNames"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_marginHorizontal="5sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/confirmed"
                            android:layout_width="204dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            android:id="@+id/confirmedTV"
                            android:textSize="15sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            style="@style/dataValue"/>
                    <TextView
                            android:id="@+id/activeTV"
                            android:text="@string/active"
                            android:layout_width="204dp"
                            android:layout_height="wrap_content"
                            style="@style/dataValue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/confirmedTV"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/migrate"
                            android:layout_width="204dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            android:id="@+id/migrateTV"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            style="@style/dataValue"/>
                    <TextView
                            android:id="@+id/deceasedTV"
                            android:text="@string/deceased"
                            android:layout_width="204dp"
                            android:layout_height="wrap_content"
                            style="@style/dataValue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/migrateTV"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                        android:id="@+id/recoveredTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        style="@style/dataValue"
                        android:text="@string/recovered"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        style="@style/dataValue"
                        android:text="@string/delta_variant"
                />
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/confirmed"
                            android:layout_width="204dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            android:id="@+id/deltaConfirmedTV"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            style="@style/dataValue"/>
                    <TextView
                            android:id="@+id/deltaDeceasedTV"
                            android:text="@string/deceased"
                            android:layout_width="204dp"
                            android:layout_height="wrap_content"
                            style="@style/dataValue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/deltaConfirmedTV"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                        android:id="@+id/deltaRecoveredTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        style="@style/dataValue"
                        android:text="@string/recovered"
                />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>